# kuro-renderer

./: .clang-format  .gitmodules  CMakeLists.txt  ChangeLog.md  README.md
kuro/: CMakeLists.txt  main.cc
kuro/graphics/: camera.cc  camera.hh  flat_shader.hh  line.cc  line.hh  rasterizer.cc  rasterizer.hh  shader_interface.hh  transform.hh  triangle.cc  triangle.hh
kuro/gui/: main_window.cc  main_window.hh  renderer_view.cc  renderer_view.hh
kuro/img/: frame_buffer.cc  frame_buffer.hh  model.cc  model.hh  qimage_util.cc  qimage_util.hh  tga_image.cc  tga_image.hh
kuro/math/: matrix.cc  matrix.hh  util.hh  vec.cc  vec.hh
kuro/setting/: option.hh
kuro/util/: endian.cc  endian.hh  file.cc  file.hh  log.cc  log.hh  qstring_util.hh
test/: CMakeLists.txt
test/graphics/: line_test.cc
test/img/: model_test.cc  tga_image_test.cc
test/math/: matrix_test.cc  vec_test.cc
test/qt/: image_test.cc
test/util/: endian_test.cc
